I think that the src and dest registers in moveDouble() call are inverted when CPU(ARM) and CPU(ARM_HARDFP).
Created attachment 213784 [details] Fix src and dest FP registers inversion when CPU(ARM) && CPU(ARM_HARDFP).
Comment on attachment 213784 [details] Fix src and dest FP registers inversion when CPU(ARM) && CPU(ARM_HARDFP). Please note that I found this by reading the code and I don't have an ARM environment to validate this patch.
Comment on attachment 213784 [details] Fix src and dest FP registers inversion when CPU(ARM) && CPU(ARM_HARDFP). Clearing flags on attachment: 213784 Committed r157173: <http://trac.webkit.org/changeset/157173>
All reviewed patches have been landed. Closing bug.