Source/JavaScriptCore/dfg/DFGSpeculativeJIT.h
@@ -1801,14 +1801,14 @@ public:
     {
         JITCompiler::Call call = appendCallWithExceptionCheck(function);
         if (result != InvalidFPRReg)
-            m_jit.moveDouble(result, FPRInfo::argumentFPR0);
+            m_jit.moveDouble(FPRInfo::argumentFPR0, result);
         return call;
     }
     JITCompiler::Call appendCallSetResult(const FunctionPtr& function, FPRReg result)
     {
         JITCompiler::Call call = appendCall(function);
         if (result != InvalidFPRReg)
-            m_jit.moveDouble(result, FPRInfo::argumentFPR0);
+            m_jit.moveDouble(FPRInfo::argumentFPR0, result);
         return call;
     }
 #else
